<resources>
    <string name="app_name">LUDIAN</string>
    <string name="login">Login</string>
    <string name="enter_your_email_password">Enter your email and password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="fogot_your_password">Forgot your password?</string>
    <string name="signup">Sign Up</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="let_started_create_account">Let\'s get started by creating your account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_agree">I agree to the medidoc Terms of Service and Privacy Policy</string>
    <string name="fullname">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="password_reset">Password Reset</string>
    <string name="please_put_your_mobile_number">Please put your mobile number to reset your password</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="check_your_mail">Check your mail or check your cell phone</string>
    <string name="please_enter_four_digit_number">Please put the 4 digits sent to you</string>
    <string name="create_new_password">Create New Password</string>
    <string name="your_new_password_must_be">Your new password must be different from previous used passwords.</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="booking">Booking</string>
    <string name="bookmark">Bookmark</string>
    <string name="explore">Explore</string>
    <string name="personal_info">Personal Info</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="general_notification">General Notification</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="app_updates">App Updates</string>
    <string name="new_tips_available">New Tips Available</string>
    <string name="notification">Notification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="search">Search...</string>
    <string name="recent_searches">Recent searches</string>
    <string name="most_popular_home">Most Popular Home</string>
    <string name="welcome">Welcome</string>
    <string name="trending_destinations">Trending destinations</string>
    <string name="nearby">Nearby</string>
    <string name="clear">Clear</string>
    <string name="completed">Completed</string>
    <string name="upcoming">Upcoming</string>
    <string name="previous">Previous</string>
    <string name="filter">Filter</string>
    <string name="rating">Rating</string>
    <string name="location">Location</string>
    <string name="property_type">Property Type</string>
    <string name="all">All</string>
    <string name="motels">Motels</string>
    <string name="resort">Resort</string>
    <string name="guest_house">Guest House</string>
    <string name="hotels">Hotels</string>
    <string name="room_type">Room Type</string>
    <string name="single">Single</string>
    <string name="family_stay">Family Stay</string>
    <string name="superior">Superior</string>
    <string name="doubles">Double</string>
    <string name="budget_range">Budget Range</string>
    <string name="date">Date</string>
    <string name="apply">Apply</string>
    <string name="guests">Guests</string>
    <string name="go_to_home">Go to Home</string>
    <string name="booking_successfully">Booking Successfully</string>
    <string name="booking_successfully_text">Thank you for using App we wish you a Happy and comfortable Holiday with Family and Relatives.</string>
    <string name="wifi">Free Wifi</string>
    <string name="free_breakfast">Free Breakfast</string>
    <string name="description">Description</string>
    <string name="preview">Preview</string>
    <string name="reasons_to_book">Reasons to book</string>
    <string name="overview">Overview</string>
    <string name="review">Review</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="book">Book</string>


<!--
    <string name="txt_error_message">%1$S</string>
-->

    <string name="txt_error_message">%s</string>

    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">PLease enter last name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_check_terms_condition">Please accept terms and conditions</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="empty">Empty</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_dont_matched">Password don\'t matched</string>
    <string name="forward">Next</string>
    <string name="back">Back</string>
    <string name="calendar">Calendar</string>
    <string name="next">Next</string>
    <string name="payment">Payment</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax_fee"><![CDATA[Taxes & Fees]]></string>
    <string name="misc_fees">Misc Fees</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="total">Total</string>
    <string name="please_select_date">Please select date</string>
    <string name="promo_code">Coupon Code</string>
    <string name="check_promo_code">Check coupon code</string>
    <string name="enter_a_promo_code">Select a coupon code</string>
    <string name="already_applied">Already applied</string>
    <string name="platform_fees">Platform fees</string>
    <string name="enter_promo_code">Enter coupon code</string>
    <string name="please_wait">Please wait...</string>

    <string name="permission_denied">Permission denied</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="Cancelled">Cancelled</string>
    <string name="data_not_available">data not available.</string>
    <string name="tap_to_complete">Tap to complete</string>
    <string name="location_api">AIzaSyAAjp4wuz5FyteoKH3Yp7Cv8pS1K86fJw0</string>
    <string name="add_review">Add review</string>
    <string name="please_add_comment">PLease add comment</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="required">This field is required</string>
    <string name="show_detail">Show details</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout this app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_language">Choose Language</string>
    <string name="chat">Chat</string>
    <string name="type_msg">Type a message</string>
    <string name="bedrooms">bedrooms</string>
    <string name="guest_max">guests max.</string>
    <string name="bathrooms">bathrooms</string>
    <string name="booking_date">Booking Date</string>
    <string name="children">Children</string>
    <string name="person">Person</string>
    <string name="booking_on">Booking on</string>
    <string name="price">Price</string>
    <string name="night"> /night</string>
    <string name="booking_not_available_on_this_date">Booking not available on this date</string>
    <string name="message_contain_phone_number">Message contains a phone number and cannot be sent</string>
    <string name="booking_details">Booking Details</string>
    <string name="proof_number">Proof Number</string>
    <string name="reservation_information">Reservation Information</string>
    <string name="reservation_number">Reservation Number</string>
    <string name="date_the_reservation_was_created">Date The Reservation Was Created</string>
    <string name="place">Place</string>
    <string name="unit">Unit</string>
    <string name="date_of_entry">Date Of Entry</string>
    <string name="departure">Departure Date</string>
    <string name="number_of_nights">Number Of Nights</string>
    <string name="payment_data">Payment Data</string>
    <string name="payment_method">Payment Method</string>
    <string name="paid_up">Paid Up</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="service_fee">Service Fees</string>
    <string name="guest_name">Provider Name</string>
    <string name="nights">Nights</string>
    <string name="guest_data">Provider Data</string>
    <string name="i_agree_terms_conditions">I agree to Terms and Conditions</string>
    <string name="accept_terms_condition">Accept terms and conditions</string>
    <string name="expire_on">Expire on</string>
    <string name="applied">applied successfully</string>
    <string name="rate_sucessfully">Rate successfully</string>

    <!--AIzaSyAAjp4wuz5FyteoKH3Yp7Cv8pS1K86fJw0-->
</resources>