<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">


            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo" />


            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/tvLogin11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/enter_your_email_password"
                android:textColor="@color/color_gray_light1"
                android:textSize="@dimen/_12sdp" />



            <RelativeLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_gray_btn_bg"
                android:elevation="@dimen/_5sdp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/english"
                    android:padding="@dimen/_10sdp"
                    android:layout_toStartOf="@id/ivDropDown"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />


                <ImageView
                    android:id="@+id/ivDropDown"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_drop_down" />



            </RelativeLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_gray_btn_bg"
                android:elevation="@dimen/_5sdp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:layoutDirection="rtl"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_gray_btn_bg"
                android:elevation="@dimen/_5sdp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:layoutDirection="rtl"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>

            <TextView
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/undeline"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/fogot_your_password"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_12sdp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/rounded_brown_btn_bg"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_10sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnSignup11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/do_not_have_an_account"
                    android:textColor="@color/color_gray_light1"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/signup"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_g" />

                <TextView
                    android:id="@+id/btnGPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:lineSpacingExtra="1dp"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>
