<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            >


            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_brown_back"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_password"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_new_password_must_be"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/color_gray_light1"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:elevation="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_gray_btn_bg">


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_password"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/edNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:hint="@string/new_password"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:singleLine="true"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:elevation="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rounded_gray_btn_bg">


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_password"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/edConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:singleLine="true"
                    />


            </LinearLayout>



        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/rounded_brown_btn_bg"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />


    </RelativeLayout>
</layout>